--- a/ebooks_app/templates/pages/book.html
+++ b/ebooks_app/templates/pages/book.html
@@ -35,7 +35,7 @@
     <div class="mt-12">
         <h2 class="text-2xl font-bold text-gray-900 mb-5">Related Books</h2>
 
-        {% include "components/carousel.html" with carousel_id="related-carousel" books=related_books %}
+        {% include "./components/carousel.html" with carousel_id="related-carousel" books=related_books %}
 
     </div>
 
